# ML_omics

./: .gitignore  Analysis-note.md  INSTALLATION.md  LICENSE  ORDINAL_INTEGRATION.md  PACKAGE_STRUCTURE.md  PREPROCESSING.md  QUICK_REFERENCE.md  README.md  pyproject.toml  requirements.txt  test.ipynb
data/: badata-amino-acids.csv  badata-aromatics.csv  badata-metabolomics.csv  badata-proteomics-imputed.csv  badata-proteomics-unimputed.csv  badata.csv
data/subs_omics_data/: F503.csv  F504.csv  F505.csv  F506.csv  combined_omics_yields 1 1.csv  mltest.xlsx
examples/: Psilocybin_ML_example.ipynb  chemical-class-enrichment.py  comparison_workflow.py  complete_workflow.py  compound_classification.py  enrichmentbyclass.ipynb  example_workflow.py  general_badata_workflow.py  modern_workflow.py  neuralops-hp-tuning.ipynb  neuralops.ipynb  ordinal-then-comparison.ipynb  ordinal_workflow.py  ordinal_workflow_svd.py  random_forest_workflow.py  test_banana_workflow.py
src/: __init__.py
src/analysis/: __init__.py  importance.py  network_analysis.py  statistical_tests.py
src/models/: __init__.py  evaluation.py  ordinal.py  pls_da.py  random_forest.py  svm.py
src/preprocessing/: __init__.py  data_processing.py  feature_selection.py
src/utils/: __init__.py  data_utils.py  io_utils.py  utils.py
src/visualization/: __init__.py  data_plots.py  dimension_reduction.py  model_plots.py  ordinal_plots.py
